Add `/sending_statistics` endpoint
API:
- Added `/sending_statistics` endpoint
DB:
- Added `SendingStatistics` struct to extract answer of the query
