# backend/api/oas_router_gen.go
@@ -148,23 +148,53 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 					return
 				}
 				switch elem[0] {
-				case '_': // Prefix: "_filter"
-					if l := len("_filter"); len(elem) >= l && elem[0:l] == "_filter" {
+				case '_': // Prefix: "_"
+					if l := len("_"); len(elem) >= l && elem[0:l] == "_" {
 						elem = elem[l:]
 					} else {
 						break
 					}
 
 					if len(elem) == 0 {
-						// Leaf node.
-						switch r.Method {
-						case "GET":
-							s.handleSendingFilterGetRequest([0]string{}, w, r)
-						default:
-							s.notAllowed(w, r, "GET")
+						break
+					}
+					switch elem[0] {
+					case 'f': // Prefix: "filter"
+						if l := len("filter"); len(elem) >= l && elem[0:l] == "filter" {
+							elem = elem[l:]
+						} else {
+							break
 						}
 
-						return
+						if len(elem) == 0 {
+							// Leaf node.
+							switch r.Method {
+							case "GET":
+								s.handleSendingFilterGetRequest([0]string{}, w, r)
+							default:
+								s.notAllowed(w, r, "GET")
+							}
+
+							return
+						}
+					case 's': // Prefix: "statistics"
+						if l := len("statistics"); len(elem) >= l && elem[0:l] == "statistics" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch r.Method {
+							case "GET":
+								s.handleSendingStatisticsGetRequest([0]string{}, w, r)
+							default:
+								s.notAllowed(w, r, "GET")
+							}
+
+							return
+						}
 					}
 				}
 			}
@@ -345,24 +375,56 @@ func (s *Server) FindRoute(method, path string) (r Route, _ bool) {
 					}
 				}
 				switch elem[0] {
-				case '_': // Prefix: "_filter"
-					if l := len("_filter"); len(elem) >= l && elem[0:l] == "_filter" {
+				case '_': // Prefix: "_"
+					if l := len("_"); len(elem) >= l && elem[0:l] == "_" {
 						elem = elem[l:]
 					} else {
 						break
 					}
 
 					if len(elem) == 0 {
-						switch method {
-						case "GET":
-							// Leaf: SendingFilterGet
-							r.name = "SendingFilterGet"
-							r.operationID = ""
-							r.args = args
-							r.count = 0
-							return r, true
-						default:
-							return
+						break
+					}
+					switch elem[0] {
+					case 'f': // Prefix: "filter"
+						if l := len("filter"); len(elem) >= l && elem[0:l] == "filter" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							switch method {
+							case "GET":
+								// Leaf: SendingFilterGet
+								r.name = "SendingFilterGet"
+								r.operationID = ""
+								r.args = args
+								r.count = 0
+								return r, true
+							default:
+								return
+							}
+						}
+					case 's': // Prefix: "statistics"
+						if l := len("statistics"); len(elem) >= l && elem[0:l] == "statistics" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							switch method {
+							case "GET":
+								// Leaf: SendingStatisticsGet
+								r.name = "SendingStatisticsGet"
+								r.operationID = ""
+								r.args = args
+								r.count = 0
+								return r, true
+							default:
+								return
+							}
 						}
 					}
 				}
